@@ -1,5 +1,15 @@
 2005-10-23  Richard Henderson  <rth@redhat.com>
 
+	* cp-gimplify.c (struct cp_gimplify_ctx): Remove.
+	(bc_label): New.
+	(begin_bc_block, finish_bc_block): Use it.
+	(push_context, pop_context): Remove.
+	(cp_genericize): Don't use them.  Assert bc_label is null.
+	* semantics.c (finish_omp_clauses): Create a fake data element
+	of TYPE for probing ctors.
+
+2005-10-23  Richard Henderson  <rth@redhat.com>
+
 	* cp-objcp-common.h (LANG_HOOKS_OMP_CLAUSE_DEFAULT_CTOR): New.
 	(LANG_HOOKS_OMP_CLAUSE_COPY_CTOR): New.
 	(LANG_HOOKS_OMP_CLAUSE_ASSIGN_OP): New.
