@@ -5,6 +5,10 @@
 	* testsuite/libgomp.c++/ctor-3.C: New.
 	* testsuite/libgomp.c++/ctor-4.C: New.
 	* testsuite/libgomp.c++/ctor-5.C: New.
+	* testsuite/libgomp.c++/ctor-6.C: New.
+	* testsuite/libgomp.c++/ctor-7.C: New.
+	* testsuite/libgomp.c++/ctor-8.C: New.
+	* testsuite/libgomp.c++/ctor-9.C: New.
 
 2005-10-21  Diego Novillo  <dnovillo@redhat.com>
 
